--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -21,6 +21,109 @@
   }
 }
 
+& body {
+  margin: 0;
+}
+
+.shibMain {
+    background: #357085;
+    padding: 15px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    min-height: 100vh;
+}
+
+.shib_panel {
+  margin: 0 auto;
+  background: #f9f9f9;
+  max-width: 770px;
+
+  .logo {
+      padding: 0;
+      background: white;
+      height: 60px;
+  }
+
+  .login_box {
+      text-align: center;
+
+      .header {
+          font-weight: 100;
+          text-transform: uppercase;
+          padding: 25px 0;
+          font-size: 5vh;
+          line-height: 1.1;
+          margin: 0;
+      }
+
+      & hr {
+          width: 70%;
+          border-top: 1px solid #e5e5e5;
+      }
+
+      & h3 {
+          margin: 0;
+          padding: 30px 0;
+          font-size: 21px;
+          font-weight: 300;
+          text-transform: uppercase;
+          color: #52c362;
+      }
+
+      .userinput {
+          background: #f9f9f9;
+          border: 1px solid #e5e5e5;
+          color: black;
+          outline: none;
+          width: 65%;
+          padding-top: 10px;
+          padding-bottom: 10px;
+          padding-left: 15px;
+          margin-bottom: 20px;
+
+          &:focus {
+              border-radius: 2px;
+              border: 2px solid #009fe3;
+          }
+      }
+
+      .userbutton {
+          cursor: pointer;
+          font-size: 16px;
+          font-weight: 400;
+          letter-spacing: 2px;
+          width: 68%;
+          padding: 15px 0;
+          background: #52c362;
+          color: white;
+          text-transform: uppercase;
+          border-radius: 2px;
+          border: none;
+          outline: none;
+          transition: 0.2s all;
+      }
+
+      .bottom_informations {
+          text-align: end;
+          bottom: 0;
+          right: 0;
+          padding-left: 15px;
+          padding-top: 20px;
+          padding-bottom: 10px;
+          opacity: 0.5;
+          cursor: pointer;
+          transition: 0.3s all;
+
+          & img {
+              padding-right: 10px;
+          }
+
+          &:hover {
+              opacity: 1;
+          }
+      }
+  }
+}
+
 .loginPanel {
   border: 1px solid rgba(0, 0, 0, .125);
   width: 60%;
