--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  min-height: 100vh;
+  min-height: calc(100vh - 32px);
 
   & h2 {
     font-weight: 300;
@@ -29,7 +29,7 @@
     background: #357085;
     padding: 15px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    min-height: 100vh;
+    min-height: calc(100vh - 30px);
 }
 
 .shib_panel {
@@ -103,9 +103,7 @@
       }
 
       .bottom_informations {
-          text-align: end;
           bottom: 0;
-          right: 0;
           padding-left: 15px;
           padding-top: 20px;
           padding-bottom: 10px;
@@ -113,8 +111,18 @@
           cursor: pointer;
           transition: 0.3s all;
 
-          & img {
+          & .faq {
+            left: 0;
+            text-align: start;
+          }
+
+          & .icons {
+            text-align: end;
+
+            & img {
+              right: 0;
               padding-right: 10px;
+            }
           }
 
           &:hover {
